# AndroidUnityRender

./: README-old.md  README.md
AndroidNative/: build.gradle  settings.gradle
AndroidNative/app/: build.gradle
AndroidNative/gradle/wrapper/: gradle-wrapper.properties
NativeAndroidApp/: .gitignore  build.gradle  settings.gradle
NativeAndroidApp/app/: CMakeLists.txt  build.gradle
NativeAndroidApp/app/src/main/cpp/: CMakeLists.txt  c_test.c  cpp_test.cpp
NativeAndroidApp/app/src/main/cpp/include/: c_test.h
NativeAndroidApp/app/src/main/cpp/includes/: cpp_test.h
NativeAndroidApp/gradle/wrapper/: gradle-wrapper.properties
NativeAndroidApp/unityTransfer/: build.gradle
NativeAndroidApp/unityTransfer/src/main/cpp/: CMakeLists.txt  UnityTransfer.cpp  main.cpp
UnityActivity/: .gitignore
UnityActivity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
UnityProject/: .gitignore
UnityProject/Assets/Materials/: CyberpunkMat.mat  MosaicMat.mat  NoneFilterMat.mat  UITextureMat.mat  testImage.mat  yuv.mat
UnityProject/Assets/MusicEffect/: Cube.prefab  NoteBounce.cs  NoteBounce.shader  NoteBounceMat.mat  Particles.shader  PaticlesMat.mat  Sphere.prefab
UnityProject/Assets/Particle/: EnergyExplosion.prefab  JigenSurasshu.prefab  Katana.mat  KatanaSpace.mat
UnityProject/Assets/Scenes/: IntPtrDataTest.unity  SampleScene.unity  Test.unity  UITest.unity
UnityProject/Assets/Scripts/: CameraHolder.cs  GLTexture.cs  MicHolder.cs  UICameraHolder.cs  WebCamManager.cs
UnityProject/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+38 files in other folders)
